crates/formatter/tests/snapshots/snapshots__migrations__000199_port_share_protocol.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agent_port_share drop column protocol;

drop type port_share_protocol;
