crates/formatter/tests/snapshots/snapshots__migrations__000200_org_provisioners.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- At the time of this migration, only 1 org is expected in a deployment.
-- In the future when multi-org is more common, there might be a use case
-- to allow a provisioner to be associated with multiple orgs.
alter table provisioner_daemons
	add column organization_id UUID references organizations (
		id
	) on delete cascade;

update provisioner_daemons
set
	-- Default to the first org
	organization_id = (
		select id
		from organizations
		where is_default = true
		limit 1
	);

alter table provisioner_daemons alter column organization_id set not null;
