crates/formatter/tests/snapshots/snapshots__migrations__000201_ensure_default_everyone_group.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Nothing to do. If the group exists, this is ok.
