crates/formatter/tests/snapshots/snapshots__migrations__000201_ensure_default_everyone_group.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- This ensures a default everyone group exists for default org.
insert into groups (name,
id,
organization_id)
select
	-- This is a special keyword that must be exactly this.
	'Everyone',
	-- Org ID and group ID must match.
	(
		select id
		from organizations
		where is_default = true
		limit 1
	),
	(select id from organizations where is_default = true limit 1)
-- It might already exist
on conflict do nothing;
