crates/formatter/tests/snapshots/snapshots__migrations__000202_remove_max_ttl.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Update the template_with_users view by recreating it.
drop view template_with_users;

alter table templates add column max_ttl bigint default '0'::bigint not null;
-- Most templates should have this set to false by now.
alter table templates add column use_max_ttl boolean not null default false;

create view template_with_users as
select
	templates.*,
	coalesce(visible_users.avatar_url, '') as created_by_avatar_url,
	coalesce(visible_users.username, '') as created_by_username
from templates
	left join visible_users on templates.created_by = visible_users.id;
comment on view template_with_users is 'Joins in the username + avatar url of the created by user.';
