crates/formatter/tests/snapshots/snapshots__migrations__000202_remove_max_ttl.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Update the template_with_users view by recreating it.
drop view template_with_users;

alter table templates drop column max_ttl;
alter table templates drop column use_max_ttl;

create view template_with_users as
select
	templates.*,
	coalesce(visible_users.avatar_url, '') as created_by_avatar_url,
	coalesce(visible_users.username, '') as created_by_username
from
	templates left join visible_users on templates.created_by = visible_users.id;
comment on view template_with_users is 'Joins in the username + avatar url of the created by user.';
