crates/formatter/tests/snapshots/snapshots__migrations__000204_add_workspace_agent_scripts_fk_index.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index workspace_agent_scripts_workspace_agent_id_idx;
