crates/formatter/tests/snapshots/snapshots__migrations__000204_add_workspace_agent_scripts_fk_index.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create index workspace_agent_scripts_workspace_agent_id_idx on workspace_agent_scripts (
	workspace_agent_id
);

comment on index workspace_agent_scripts_workspace_agent_id_idx is 'Foreign key support index for faster lookups';
