crates/formatter/tests/snapshots/snapshots__migrations__000205_unique_linked_id.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index user_links_linked_id_login_type_idx;
